<resources>
    <string name="app_name">ListViewExample</string>
    <string name="header">Users:</string>
    <string name="id">Id: </string>
    <string name="name">Name:</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="website">Website:</string>
    <string name="address">Address:</string>
    <string name="company">Company:</string>
</resources>
